Feat: Pagina circular
spin

--- a/barraza_parcial_1/src/App.css
+++ b/barraza_parcial_1/src/App.css
@@ -4,7 +4,11 @@
 
 .App-logo {
   height: 40vmin;
+  width: 40vmin;
   pointer-events: none;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 @media (prefers-reduced-motion: no-preference) {
